--- a/Mini Accounting Management System/Pages/Shared/_Layout.cshtml
+++ b/Mini Accounting Management System/Pages/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <title>@ViewData["Title"] - Mini_Accounting_Management_System</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/Mini_Accounting_Management_System.styles.css" asp-append-version="true" />
+    <!--<link rel="stylesheet" href="~/Mini_Accounting_Management_System.styles.css" asp-append-version="true" />-->
 </head>
 <body>
     <header>
